# aq_agent

./: .env-example  README.md  app.py  docker-compose.yaml  load_records.py  pyproject.toml  sample_data.py
groq_service/: __init__.py  groq_bot.py
notify_service/: __init__.py  notifier.py  slack_notifier.py
ticket_service/: JiraTicketService.py  TicketService.py  __init__.py
vectordb_service/: __init__.py  vectordb_service.py
